--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,7 +5,7 @@
   line-height: 22px;
   text-decoration-line: underline;
   color: #fff;
-  font-family: 'Inter-light';
+  font-family: 'Inter';
   margin-top: 12px;
   transition: opacity 0.2s linear;
 }
