--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
-  font-family: 'Inter-light';
+  font-family: 'Inter';
   grid-area: paragraph;
   margin: 48px 0 0 0;
 }
