--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
-  font-family: 'Inter-light';
+  font-family: 'Inter';
   transition: opacity 0.2s linear;
   margin-right: 18px;
 }
