--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,9 +5,11 @@
   font-size: 1.5rem;
   line-height: 28px;
   font-style: normal;
+  text-decoration: none;
+  color: #fff;
 }
 
 .header__lang-link:nth-of-type(1) {
   margin-right: 18px;
-  border-bottom: 1px solid;
+  text-decoration: underline;
 }
