--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,7 +4,7 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 18px;
-  font-family: 'Inter-light';
+  font-family: 'Inter';
   padding: 0;
   margin: 0;
 }
