--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,9 @@
 .intro {
-  max-width: 690px;
-  margin: 92px auto 0 0;
   display: flex;
   flex-direction: column;
+  align-items: baseline;
+  margin: 92px auto auto auto;
+  max-width: 984px;
 }
 
 @media screen and (max-width: 768px) {
