--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,7 +6,7 @@
   text-align: center;
   margin: 0 0 64px 0;
   max-width: 640px;
-  font-family: 'Inter-light';
+  font-family: 'Inter';
 }
 
 @media screen and (max-width: 693px) {
