--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,16 +6,23 @@
   max-width: 984px;
 }
 
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin: 88px auto 0 auto;
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .intro {
-    margin: 88px 0 0 0;
+    margin: 88px auto 0 auto;
     max-width: 720px;
   }
 }
 
 @media screen and (max-width: 693px) {
   .intro {
-    margin: 64px 0 0 0;
+    margin: 64px auto 0 auto;
     width: 90vw;
   }
 }
