--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,19 +3,17 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
-  font-family: 'Inter';
-  grid-area: paragraph;
-  margin: 48px 0 0 0;
+  font-family: 'Inter', Arial, sans-serif;
+  margin: 0;
 }
 
-.place__paragraph:nth-last-of-type(1) {
+.place__paragraph:last-of-type {
   grid-area: text;
-  margin-top: 0;
+  margin-top: 26px;
 }
 
-#last-paragraph {
-  grid-area: paragraph;
-  margin-top: 48px;
+.place__paragraph:first-of-type {
+  margin-top: 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -27,9 +25,5 @@
 @media screen and (max-width: 693px) {
   .place__paragraph {
     margin-top: 32px;
-  }
-
-  .place__paragraph:nth-last-of-type(1) {
-    margin-top: 25px;
   }
 }
