--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,7 +4,7 @@
   font-size: 18px;
   line-height: 122%;
   text-align: center;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   z-index: 1;
   max-width: 360px;
   margin: 0;
