--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,7 +5,7 @@
   line-height: 106%;
   text-align: center;
   z-index: 1;
-  margin: 0;
+  margin: 0 0 32px 0;
   max-width: 560px;
 }
 
@@ -13,5 +13,6 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
+    margin: 0 0 16px 0;
   }
 }
