--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,9 +3,9 @@
   margin: 92px auto 0 auto;
   position: relative;
   background-image: url(../../images/cover-trains.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  height: 62.5vw;
+  min-height: 57.81vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,15 +19,16 @@
   width: 100%;
   background-color: rgba(42, 44, 47, 100%);
   opacity: 0.3;
+  transition: opacity 0.3s;
 }
 
 .cover:hover::before {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 1281px) {
   .cover {
-    max-height: 740px;
+    min-height: 740px;
   }
 }
 
