--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,13 +5,17 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   transition: opacity 0.2s linear;
   margin-right: 18px;
 }
 
 .footer__link:hover {
   opacity: 0.8;
+}
+
+.footer__link:last-of-type {
+  margin-right: 0;
 }
 
 @media screen and (max-width: 320px) {
