--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,10 @@
+.footer__links {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media screen and (max-width: 400px) {
   .footer__links {
-    display: flex;
     flex-direction: column;
   }
 }
