--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   width: 92.5vw;
   max-width: 1184px;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1024px) {
@@ -22,6 +23,6 @@
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column;
-    margin: 64px auto 24px auto;
+    margin: 64px 0 24px 0;
   }
 }
