--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,15 +1,22 @@
 .header__lang-link {
   display: flex;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 28px;
   font-style: normal;
   text-decoration: none;
   color: #fff;
+  margin-right: 18px;
 }
 
-.header__lang-link:nth-of-type(1) {
-  margin-right: 18px;
-  text-decoration: underline;
+.header__lang-link:last-of-type {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
