--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,5 +4,11 @@
   font-size: 16px;
   line-height: 163%;
   margin: 0 0 33px 0;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
+}
+
+@media screen and (min-width: 769px) {
+  .intro__text {
+    max-width: 690px;
+  }
 }
