--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,7 @@
   font-size: 10px;
   line-height: 14px;
   margin: 8px auto 0 0;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
