--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,3 +12,9 @@
     max-width: 928px;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width:1280px) {
+  .lead {
+    margin: 48px auto 0 auto;
+  }
+}
