--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,7 +2,13 @@
   max-width: 100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
+  .photo-grid__item {
+    max-width: 352px;
+  }
+}
+
+@media screen and (max-width: 374px) {
   .photo-grid__item {
     max-width: 288px;
   }
