--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -17,6 +17,7 @@
 
 @media screen and (max-width: 768px) {
   .photo-grid {
+    max-width: 720px;
     gap: 16px;
     margin: 88px auto 0 auto;
   }
