--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,6 @@
 .place__image {
   max-width: 460px;
   grid-area: image;
-  margin-top: 48px;
 }
 
 @media screen and (max-width:1024px) {
@@ -19,6 +18,13 @@
 @media screen and (max-width:693px) {
   .place__image {
     max-width: 320px;
-    margin-top: 32px;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
+  .place__image {
+    /* max-width: 320px; */
+    min-width: 100%;
   }
 }
