--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
-    font-weight: 46px;
+    line-height: 46px;
   }
 }
 
@@ -18,5 +18,11 @@
   .place__title {
     font-size: 32px;
     line-height: 35px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width:767px) {
+  .place__title {
+    margin-left: 16px;
   }
 }
