--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,5 +5,6 @@
   line-height: 12px;
   color: #aaa;
   letter-spacing: 2px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
+  margin: 0 0 12px 0;
 }
