--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,12 @@
 .place {
   display: grid;
   margin: 80px auto 0 auto;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 460px 1fr;
   grid-template-areas:
   "title website"
-  "image paragraph"
-  "image text";
+  "image paragraph";
   column-gap: 40px;
+  row-gap: 48px;
 }
 
 .place:first-of-type {
@@ -15,13 +15,20 @@
 
 @media screen and (max-width: 1024px) {
   .place {
+    grid-template-columns: 440px 1fr;
     column-gap: 32px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
+    grid-template-columns: 340px 1fr;
     column-gap: 28px;
+    margin: 73px auto 0 auto;
+  }
+
+  .place:first-of-type {
+    margin: 88px auto 0 auto;
   }
 }
 
@@ -29,6 +36,13 @@
   .place {
     display: flex;
     flex-direction: column;
+    row-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    margin: 50px auto 0 auto;
   }
 
   .place:first-of-type {
