--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,12 +1,18 @@
 .places {
   margin: 0 auto 0 auto;
   max-width: 984px;
-  width: 76.875vw;
+  /* width: 76.875vw; */
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (min-width:768px) and (max-width: 1150px) {
   .places {
     width: 90.625vw;
     max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 0;
   }
 }
