--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,5 +6,5 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   color: #fff;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
 }
